# blog_source

./: .gitignore  README.md  pyproject.toml  setup.sh
pelican/: pelicanconf.py  publishconf.py  tasks.py
pelican/content/: hello_world.md
pelican/content/blog/: asdf.md  black.md  chocolatey.md  iterate_over_dict.md  no_newline_at_end_of_file.md  openwrt_vpn_rkn.md  pipenv.md  pre-commit.md  pyenv.md  python2_print.md  python_linters.md  requirements_txt.md  type_hints.md  virtualenv.md
pelican/content/pages/: about.md  subscribe.md
pelican/content/posts/: virtualenv.md
pelican/themes/pelican-clean-blog/static/css/: clean-blog.css  clean-blog.min.css
pelican/themes/pelican-clean-blog/templates/: analytics.html  article.html  author.html  base.html  footer.html  index.html  pagination.html  tag.html  tags.html
