[tool.poetry]
name = "blog_source"
version = "0.1.0"
description = ""
authors = ["Andrey Semakin <and-semakin@ya.ru>"]

[tool.poetry.dependencies]
python = "^3.8"
pelican = "^4.2.0"
Markdown = "^3.2.1"
bs4 = "^0.0.1"
requests = "^2.23.0"
gitpython = "^3.1.1"
plural-ru = "^2019.4.13"
pymdown-extensions = "^8.0.1"

[tool.poetry.dev-dependencies]
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
